--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "pacotest"]
+	path = pacotest
+	url = https://github.com/maltekurz/pacotest
+	shallow = true
+	registered = true
